--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,103 @@
 // Your code here
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
 
 .wave {
   background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='utf-8'%3F%3E%3C!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0) --%3E%3Csvg version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 1600 198' style='enable-background:new 0 0 1600 198;' xml:space='preserve'%3E%3Cstyle type='text/css'%3E .st0%7Bfill:url(%23SVGID_1_);%7D%0A%3C/style%3E%3ClinearGradient id='SVGID_1_' gradientUnits='userSpaceOnUse' x1='320.6993' y1='377.5869' x2='320.7004' y2='378.692' gradientTransform='matrix(-1600 0 0 -198.0004 513920 75060.1484)'%3E%3Cstop offset='1.805556e-02' style='stop-color:%233141BE'/%3E%3Cstop offset='0.4847' style='stop-color:%235F5BD5'/%3E%3Cstop offset='0.8708' style='stop-color:%238545C5'/%3E%3Cstop offset='0.9917' style='stop-color:%239A39BC'/%3E%3C/linearGradient%3E%3Cpath class='st0' d='M1600,121c-121.2,0-257-32.4-347-31c-130,2-195.2,62.8-440,63C636,153,536,41,417,41c-98,0-255.9,80-417,80v77 h1600C1600,198,1600,150,1600,121z'/%3E%3C/svg%3E%0A");
+}
+
+body {
+  background-color: #131526;
+  color: #ffffff;
+  box-sizing: border-box;
+}
+
+.wrapper {
+  width: 60vw;
+  margin: 0 auto;
+}
+
+.capsule-information {
+  display: grid;
+
+
+  >div:nth-child(1) {
+    grid-row: 1;
+  }
+
+  >div:nth-child(2) {
+    grid-row: 1;
+    padding: 1em;
+
+    &:hover {
+      background-color: #0A0E18;
+    }
+
+    &:hover~div.coffee-specs {
+      display: block !important;
+    }
+  }
+}
+
+.coffee-specs {
+  grid-row: 2;
+  grid-column-start: 1;
+  grid-column-end: span 2;
+  background-color: #0A0E18;
+  width: 100%;
+  padding: 1em;
+
+  ul {
+    >li {
+
+      display: flex;
+
+      >ul {
+        flex-grow: 1;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+
+        >li {
+          margin-right: 1em;
+        }
+      }
+    }
+  }
+}
+
+#fetched-data {
+  >p {
+    margin: 0;
+  }
+}
+
+@media screen and (width <=768px) {
+  .capsule-information {
+    display: flex;
+    flex-direction: column;
+
+    >div:nth-child(1)>p {
+      display: none;
+      padding: 0 2em;
+    }
+
+    >div:nth-child(2) {
+      padding: 0 2em;
+      align-self: center;
+
+      &:hover {
+        background-color: initial;
+      }
+    }
+  }
+
+  .coffee-specs {
+    >ul>li>ul {
+      display: none;
+    }
+  }
 }
